--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "dayjs": "^1.11.6",
     "v-calendar": "^2.4.1",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
